# cais

./: .gitignore  CMakeLists.txt  README.md
examples/: example_add.cpp  example_matmul.cpp  example_scale.cpp  main.cpp
include/cais/: common.hpp  engine.hpp  solver.hpp
src/: cpu_engine.cpp  cpu_engine.hpp  kernels.cpp  opencl_engine.cpp  opencl_engine.hpp  solver.cpp
